add wifi-extra-info for particle filter

--- a/config/params.yaml
+++ b/config/params.yaml
@@ -81,7 +81,8 @@
 
         # 添加particle_generator参数
         particle_generator_step: 2.0       # 粒子采样步长
-        particle_generator_radius: 7.0     # 搜索半径(米)
+        particle_generator_radius: 6.0     # 搜索半径(米)
+        use_room_info: true               # 是否使用WiFiLocation中的room信息来过滤粒子
         # without icp initialization 
         rescue_angle_interval: 5.0
         # --------------------------------------------------------
