--- a/config/params.yaml
+++ b/config/params.yaml
@@ -61,7 +61,7 @@
                     # seq01 - [0.5, 0.15, 0.0]  yaw:10.0
                     # 95 - [4.0, -6.0, 0.0] yaw: 90.0
 
-        # 在开启全局定位下（模式1和模式2），以下可以是个垃圾值,因为不用他们了   
+        # 在开启全局定位下（模式1和模式2），以下可以是个垃圾值,因为不用他们了，但在仅位姿跟踪下则需要准确值   
         initialYawAngle: 90.0 
         initialExtrinsicTrans: [4.0, -6.0, 0.0] 
 
