--- a/config/params.yaml
+++ b/config/params.yaml
@@ -62,9 +62,9 @@
                     # 95 - [4.0, -6.0, 0.0] yaw: 90.0
 
         # 在开启全局定位下（模式1和模式2），以下可以是个垃圾值,因为不用他们了，但在仅位姿跟踪下则需要准确值
-        initialYawAngle: 90.0  # bag: 95, agile03_Mars_01
+        # initialYawAngle: 90.0  # bag: 95, agile03_Mars_01
         # initialExtrinsicTrans: [4.0, -6.0, 0.0]  # bag: 95
-        initialExtrinsicTrans: [4.18, -3.51, 0.0]  # bag: agile03_Mars_01
+        # initialExtrinsicTrans: [4.18, -3.51, 0.0]  # bag: agile03_Mars_01
 
         # initialYawAngle: 180.0  # bag: agile03_corridor_01
         # initialExtrinsicTrans: [8.36, 9.24, 0.0]  # bag: agile03_corridor_01
@@ -188,7 +188,7 @@
 
         # ========== 里程计融合参数 ==========
         # 基于AMCL算法思想的里程计与ICP融合配置
-        enable_odom_fusion: false               # 是否启用里程计融合
+        enable_odom_fusion: true               # 是否启用里程计融合
         odom_topic: "/odom"                     # 里程计话题名称
         odom_timeout: 0.1                       # 里程计超时时间(秒)
 
@@ -204,7 +204,7 @@
         adaptive_weight: true                   # 是否启用自适应权重调整
 
         # 多假设跟踪参数
-        enable_multi_hypothesis: false          # 是否启用多假设跟踪
+        enable_multi_hypothesis: true          # 是否启用多假设跟踪
         max_hypotheses: 3                       # 最大假设数量
         hypothesis_weight_threshold: 0.1        # 假设权重阈值
 
