--- a/config/params.yaml
+++ b/config/params.yaml
@@ -5,7 +5,6 @@
         # 点云数据的预处理和组织
         # 过滤无效点
         # 实现论文中的"clutter removal"步骤
-        # pointCloudTopic: "/lidar_points"            # Point cloud topic  --- Agile03: /lidar_points ; Agile01,02: /hesai/pandar
         pointCloudTopic: "/hesai/pandar"            # 用agile-01录的包中的雷达话题名即为/hesai/pandar，以后用agile-03录的包，这里也不用改了，因为在launch播包时已经重映射了
         N_SCAN: 64                                  # 雷达垂直线数 number of lidar channel (i.e., 16, 32, 64, 128)
         Horizon_SCAN: 600 #1800                     # 水平分辨率 lidar horizontal resolution (Velodyne:1800, Ouster:512,1024,2048)
@@ -60,10 +59,11 @@
                     # seq01 - [0.5, 0.15, 0.0]  yaw:10.0
                     # 95 - [4.0, -6.0, 0.0] yaw: 90.0
 
+
         # 在开启全局定位下（模式1和模式2），以下可以是个垃圾值,因为不用他们了，但在仅位姿跟踪下则需要准确值
-        # initialYawAngle: 90.0  # bag: 95, agile03_Mars_01
+        initialYawAngle: 90.0  # bag: 95, agile03_Mars_01
         # initialExtrinsicTrans: [4.0, -6.0, 0.0]  # bag: 95
-        # initialExtrinsicTrans: [4.18, -3.51, 0.0]  # bag: agile03_Mars_01
+        initialExtrinsicTrans: [4.18, -3.51, 0.0]  # bag: agile03_Mars_01
 
         # initialYawAngle: 180.0  # bag: agile03_corridor_01
         # initialExtrinsicTrans: [8.36, 9.24, 0.0]  # bag: agile03_corridor_01
@@ -74,8 +74,11 @@
         # initialYawAngle: 270.0  # bag: agile03_corridor_03
         # initialExtrinsicTrans: [7.95, 30.79, 0.0]  # bag: agile03_corridor_03
 
+        initialYawAngle: 90.0  # bag: agile03_Mars_door_01
+        initialExtrinsicTrans: [1.4, 4.55, 0.0]  # bag: agile03_Mars_door_01
+
         # 是否全局定位+位姿跟踪（模式2）
-        bRescueRobot: true                  # 是否启用全局定位 （true则同时需要启particle_generator节点）- (如果不启用则直接读入params中的位姿)
+        bRescueRobot: false                  # 是否启用全局定位 （true则同时需要启particle_generator节点）- (如果不启用则直接读入params中的位姿)
 
         # 25.2.20在测试这个模式-希望跑通 -- 2.28已跑通
         # 是否测试全局定位效果（模式1） --- 每帧点云都用来执行全局定位
