--- a/config/params.yaml
+++ b/config/params.yaml
@@ -62,7 +62,7 @@
 
         # 在开启全局定位下（模式1和模式2），以下可以是个垃圾值,因为不用他们了，但在仅位姿跟踪下则需要准确值
         initialYawAngle: 90.0  # bag: 95, agile03_Mars_01
-        # initialExtrinsicTrans: [4.0, -6.0, 0.0]  # bag: 95
+        # # initialExtrinsicTrans: [4.0, -6.0, 0.0]  # bag: 95
         initialExtrinsicTrans: [4.18, -3.51, 0.0]  # bag: agile03_Mars_01
 
         # initialYawAngle: 180.0  # bag: agile03_corridor_01
@@ -74,11 +74,16 @@
         # initialYawAngle: 270.0  # bag: agile03_corridor_03
         # initialExtrinsicTrans: [7.95, 30.79, 0.0]  # bag: agile03_corridor_03
 
-        initialYawAngle: 90.0  # bag: agile03_Mars_door_01
-        initialExtrinsicTrans: [1.4, 4.55, 0.0]  # bag: agile03_Mars_door_01
+        # initialYawAngle: 180.0  # bag: agile03_Mars_door_01
+        # initialExtrinsicTrans: [1.4, 4.55, 0.0]  # bag: agile03_Mars_door_01
 
+        # initialYawAngle: 150.0  # bag: agile03_Jun-18-wifi_SIST-D-2
+        # initialExtrinsicTrans: [2.38, -6.97, 0.0]  # bag: agile03_Jun-18-wifi_SIST-D-2
+
+
+        
         # 是否全局定位+位姿跟踪（模式2）
-        bRescueRobot: false                  # 是否启用全局定位 （true则同时需要启particle_generator节点）- (如果不启用则直接读入params中的位姿)
+        bRescueRobot: true                  # 是否启用全局定位 （true则同时需要启particle_generator节点）- (如果不启用则直接读入params中的位姿)
 
         # 25.2.20在测试这个模式-希望跑通 -- 2.28已跑通
         # 是否测试全局定位效果（模式1） --- 每帧点云都用来执行全局定位
@@ -190,7 +195,7 @@
 
         # ========== 里程计融合参数 ==========
         # 基于AMCL算法思想的里程计与ICP融合配置
-        enable_odom_fusion: true               # 是否启用里程计融合
+        enable_odom_fusion: false               # 是否启用里程计融合
         odom_topic: "/odom"                     # 里程计话题名称
         odom_timeout: 0.1                       # 里程计超时时间(秒)
 
